# cxx-modules

./: .gitignore  CMakeLists.txt  CMakePresets.json  idc.cppm  main.cpp  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CMakeLists.txt  CMakePresets.json  CMakePresets_private.json  CMakeUserPresets.json  helper.cppm  idc.cpp  idc.cppm  main.cpp  readme.md
cmake/cmake/: clang_modules.cmake  idc-config.cmake.in
compiler-only/: add.cpp  add.cppm  main.cpp  readme.md
